@@ -7,6 +7,8 @@ TODO: FAQ: common pitfalls? invoke-before-return
 TODO: FAQ: scope-ids? hosts file order?
 TODO: AnyEvent::Handle with AnyEvent::IO?
 
+TODO: %HOSTS fill up during name resolution (sten).
+TODO: leka on guard undef resolve (sten)
 	- AnyEvent::Socket::inet_aton did not work when dns resolution was
           used to find the addresses (analyzed and patch by Maxime Soulé).
 
